# source-stack-desktop

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: windows-build.yml
docs/: MIGRATION_FROM_FASTAPI.md
scripts/: run-tauri.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: auth.rs  commands.rs  document_parser.rs  errors.rs  field_extractor.rs  google_drive.rs  google_sheets.rs  job_store.rs  mod.rs  models.rs  ocr.rs  pdf.rs  secret_store.rs  service.rs  settings_store.rs
src/SourceStack.Core/: SourceStack.Core.csproj
src/SourceStack.Core/Abstractions/: IGoogleAccessTokenProvider.cs  IGoogleDriveClient.cs  IGoogleSheetsClient.cs  IJobStore.cs  IResumeParserService.cs
src/SourceStack.Core/Adapters/: ResumeProcessingController.cs  SourceStackCoreFactory.cs  SourceStackCoreServiceCollectionExtensions.cs
src/SourceStack.Core/Auth/: DpapiTokenStore.cs  GoogleOAuthTokenEnvelope.cs  GoogleOAuthTokenService.cs
src/SourceStack.Desktop.Cli/: Program.cs  SourceStack.Desktop.Cli.csproj
src/SourceStack.Desktop.WinForms/: DesktopSettings.cs  GlassCardPanel.cs  GradientPanel.cs  MainForm.cs  Program.cs  SettingsStore.cs  SourceStack.Desktop.WinForms.csproj
src/components/: AppShell.tsx  DashboardView.tsx  DriveFolderBrowser.tsx  JobsView.tsx  SettingsView.tsx
src/lib/: api.ts  types.ts  utils.ts
src/styles/: index.css
tests/SourceStack.Core.Tests/: JsonJobStoreTests.cs  ResumeFieldExtractorTests.cs  ResumeParserServiceTests.cs  SourceStack.Core.Tests.csproj
(+22 files in other folders)
