[package]
name = "source-stack-desktop-tauri"
version = "0.1.0"
description = "SourceStack Desktop (Tauri)"
authors = ["Dipesh"]
edition = "2021"
default-run = "source-stack-desktop-tauri"

[lib]
name = "source_stack_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "6"
futures = "0.3"
keyring = "3"
once_cell = "1"
open = "5"
phonenumber = "0.3"
pdf-extract = "0.7"
quick-xml = "0.38"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process", "sync", "fs"] }
tokio-util = "0.7"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
